使用${version}表示当前项目版本

--- a/framework-filter/pom.xml
+++ b/framework-filter/pom.xml
@@ -18,7 +18,7 @@
         <dependency>
             <groupId>com.centit.framework</groupId>
             <artifactId>framework-core</artifactId>
-            <version>${centit.framework.version}</version>
+            <version>${version}</version>
             <scope>provided</scope>
         </dependency>
 
