--- a/framework-config/pom.xml
+++ b/framework-config/pom.xml
@@ -18,14 +18,14 @@
         <dependency>
             <groupId>com.centit.framework</groupId>
             <artifactId>framework-core</artifactId>
-            <version>${centit.framework.version}</version>
+            <version>${version}</version>
             <scope>provided</scope>
         </dependency>
 
         <dependency>
             <groupId>com.centit.framework</groupId>
             <artifactId>framework-security</artifactId>
-            <version>${centit.framework.version}</version>
+            <version>${version}</version>
         </dependency>
 
         <!--引入h2嵌入式数据库来管理session的持久化问题-->
