--- a/framework-system-static-config/pom.xml
+++ b/framework-system-static-config/pom.xml
@@ -18,7 +18,7 @@
         <dependency>
             <groupId>com.centit.framework</groupId>
             <artifactId>framework-system-static-jdbc</artifactId>
-            <version>${centit.framework.version}</version>
+            <version>${version}</version>
         </dependency>
 
     </dependencies>
