--- a/framework-core-web/src/main/resources/system.properties
+++ b/framework-core-web/src/main/resources/system.properties
@@ -1,20 +1,46 @@
 #\u5E94\u7528\u7CFB\u7EDF\u4E3B\u76EE\u5F55
-app.home = D:/Projects/RunData/demo_home
-app.staticfile.home = /framework-sys-view-easyui
-#\u8FD9\u4E2A\u76EE\u5F55\u5FC5\u987B\u662F /config \u4E0D\u80FD\u4FEE\u6539
-dir.config = /config
-#\u8FD9\u4E2A\u76EE\u5F55\u5FC5\u987B\u662F /sqlscript \u4E0D\u80FD\u4FEE\u6539
-dir.extenedSql = /sqlscript
-#\u65E5\u5FD7\u76EE\u5F55\uFF0C\u662F\u76F8\u5BF9\u4E8E\u5E94\u7528\u7CFB\u7EDF\u4E3B\u76EE\u5F55\u7684\uFF0C\u4E0B\u540C
-dir.log = /logs
-#\u4E0A\u4F20\u6587\u4EF6\u76EE\u5F55
-dir.upload = /upload
-#\u516C\u5171\u6587\u4EF6\u76EE\u5F55
-dir.publicfile = /publicfile
-#\u5168\u6587\u68C0\u7D22\u7D22\u5F15\u76EE\u5F55
-dir.index = /index
-#\u4E34\u65F6\u6587\u4EF6\u76EE\u5F55
-dir.temp = /temp
+app.key = framework-static
+app.name = \u6846\u67B6demo
+app.home = /D/Projects/RunData/demo_home
+app.subsystem = false
+app.staticfile.home = /framework
+app.local.firstpage = /system/mainframe/index
+#\u591A\u56FD\u8BED\u8A00\u8BBE\u7F6E
+app.local.multiLang= false
+app.local.defalutLang=zh_CN
+#\u662F\u5426\u5F00\u653E\u5B9E\u65BD\u4EBA\u5458\u5165\u53E3
+app.deploy.enabled = true
+
+#\u6570\u636E\u5E93\u8FDE\u63A5\u53C2\u6570\u914D\u7F6E\uFF0C\u540E\u7EED\u7684\u7248\u672C\u4F1A\u628A\u8FD9\u4E2A\u66FF\u6362\u4E3Ajdni\u90A3\u6837\u66F4\u7075\u6D3B\u66F4\u5B89\u5168\uFF0C
+#\u56E0\u4E3A\u4E0D\u8981\u63D0\u4F9B\u5BC6\u7801\uFF0C\u5355\u5143\u914D\u7F6E\u6587\u4EF6\u4E2D\u4E5F\u53EF\u4EE5\u5BF9\u5BC6\u7801\u8FDB\u884C\u52A0\u5BC6\uFF0C\u6682\u65F6\u6CA1\u6709\u505A
+
+#jdbc.dialect=org.hibernate.dialect.Oracle10gDialect
+#jdbc.driver = oracle.jdbc.driver.OracleDriver
+#jdbc.user =workflow
+#jdbc.password =workflow
+#jdbc.url=jdbc:oracle:thin:@192.168.131.81:1521:orcl
+
+jdbc.dialect=org.hibernate.dialect.MySQLDialect
+jdbc.driver=com.mysql.jdbc.Driver
+jdbc.user =framework
+jdbc.password =framework
+#jdbc.url=jdbc:mysql://192.168.128.32:3306/frameworkdb?useUnicode=true&characterEncoding=utf-8
+jdbc.url=jdbc:mysql://192.168.131.6:3306/framework?useUnicode=true&characterEncoding=utf-8
+
+#\u6570\u636E\u5E93datasource\u5C5E\u6027\u914D\u7F6E
+jdbc.minSize = 5
+jdbc.maxActive = 50
+jdbc.maxIdle = 15
+jdbc.maxWait = 1000
+jdbc.defaultAutoCommit = true
+jdbc.removeAbandoned = true
+jdbc.removeAbandonedTimeout = 60
+jdbc.acquireIncrement=5
+jdbc.acquireRetryAttempts=5
+jdbc.acquireRetryDelay=2000
+jdbc.idleConnectionTestPeriod=30
+jdbc.validationQuery = select 1 from dual
+
 
 #spring security \u767B\u9646\u8BBE\u7F6E
 http.csrf.enable = false
@@ -23,8 +49,17 @@ http.csrf.enable = false
 http.filter.chain.continueBeforeSuccessfulAuthentication = false
 #\u8BBE\u7F6E\u6240\u6709\u7684\u8D44\u6E90\u90FD\u8981\u88AB\u5BA1\u6838\uFF0C\u9ED8\u8BA4\u4E3Afalse\uFF0C\u5982\u679C\u662Ffalse\u5C31\u662F\u6CA1\u6709\u8D4B\u7ED9\u4EFB\u4F55\u89D2\u8272\u7684\u64CD\u4F5C\u5C31\u4F1A\u88AB\u8BA4\u4E3A\u662F\u4E0D\u9700\u8981\u5BA1\u6838\u7684\uFF0C\u4F1A\u81EA\u52A8\u653E\u884C
 http.security.allResourceMustBeAudited =
-
+http.anonymous.disable = true
+access.resource.notallowed.anonymous = true
+access.resource.must.be.audited = false
+security.ignore.url =
 #\u767B\u5F55\u76F8\u5173\u8BBE\u7F6E\uFF0C \u8FD9\u4E9B\u8BBE\u7F6E\u53EA\u5728Dao\u767B\u9646\u65B9\u5F0F\u662F\u6709\u6548\uFF0Ccas\u767B\u9646\u65B9\u5F0F\u662F\uFF0C\u767B\u9646\u5F62\u5F0F\u6709cas\u51B3\u5B9A
+#\u5355\u70B9\u767B\u5F55\u76F8\u5173\u914D\u7F6E\u4FE1\u606F
+login.dao.enable= true
+login.cas.enable= false
+login.cas.localHome = http://localhost:8184/framework
+login.cas.casHome = https://zou_wy:8443/centit-cas
+
 #default false
 login.failure.writeLog =
 #default /system/mainframe/login/error
@@ -49,17 +84,43 @@ login.retry.lockMinites =
 login.retry.checkTimeTnterval =
 
 
-#email \u90AE\u7BB1\u8BBE\u7F6E
-message.sender.email.hostName = email.centit.com
-message.sender.email.smtpPort = 25
-message.sender.email.userName = accounts
-message.sender.email.userPassword = yhs@yhs1\
-message.sender.email.serverEmail = noreplay@centit.com
+#LDAP\u767B\u5F55\u914D\u7F6E
+ldap.url=ldap://192.168.128.5:389
+ldap.userName=accounts@centit.com
+ldap.userPassword=yhs@yhs1
+ldap.searchBase=CN=Users,DC=centit,DC=com
+ldap.searchFilter=(sAMAccountName={0})
+ldap.userDnPatterns=sAMAccountName={0},CN=Users,DC=centit,DC=com
 
-#session \u6301\u4E45\u5316
-session.persistence.enable=true
-# \u5982\u679C\u662F\u5355\u8282\u70B9\u4E3A\u4E86\u91CD\u542F\u6062\u590Dsession h2
-# \u5982\u679C\u5F0F\u591A\u4E2A\u8282\u70B9\u4E3A\u4E86 \u8D1F\u8F7D\u5747\u8861\u7528 redis
+#\u767B\u5F55\u6210\u529F\u540E\u7684\u9996\u9875
+
+
+centit.ip.enable = false
+centit.ip.home = http://productsvr.centit.com:8880/centit-ip/service/platform
+centit.ip.topoptid=METAFORM
+
+centit.jdbcplatform.enable = false
+centit.jdbcplatform.url =
+centit.jdbcplatform.username =
+centit.jdbcplatform.password =
+#\u662F\u5426\u5141\u8BB8\u6CE8\u518C\u65B0\u7528\u6237
+webuser.enable=false
+#\u6CE8\u518C\u7528\u6237\u9ED8\u8BA4\u89D2\u8272
+webuser.role=G-webuser
+
+
+#\u6D88\u606F\u7EC4\u4EF6WebSocketIO\u670D\u52A1\u5668\u5730\u5740\u53CA\u7AEF\u53E3
+#(\u8FD9\u4E2A\u5730\u5740\u4E00\u822C\u548Cweb\u670D\u52A1\u5668\u5730\u5740\u4E00\u81F4\uFF0C\u4E5F\u53EF\u4EE5\u5C06\u8FD9\u90E8\u5206\u670D\u52A1\u5355\u72EC\u90E8\u7F72\u5230\u4E00\u4E2A\u670D\u52A1\u5668\u4E0A)
+socketio.enable=false
+socketio.host = 127.0.0.1
+socketio.port = 9137
+
+
+session.persistence.enable=false
+#session.persistence.db.type=redis
 session.persistence.db.type=h2
-redis.host=127.0.0.1
-redis.port=6379
+
+session.h2.file = D:/Projects/RunData/demo_home/config/db
+session.redis.host=127.0.0.1
+session.redis.port=6379
+
