--- a/framework-web-demo/src/main/resources/system.properties
+++ b/framework-web-demo/src/main/resources/system.properties
@@ -1,9 +1,15 @@
-#\u5E94\u7528\u7CFB\u7EDF\u4E3B\u76EE\u5F55
+# \u4E1A\u52A1\u7CFB\u7EDF\u7684key \u7528\u4E8E\u751F\u6210\u79D8\u94A5\u3001cas\u5355\u70B9\u767B\u5F55\u7968\u636E\u7B49\u7B49
 app.key = framework-static
+# \u7CFB\u7EDF\u7684\u540D\u79F0
 app.name = \u6846\u67B6demo
+#\u5E94\u7528\u7CFB\u7EDF\u4E3B\u76EE\u5F55
+# \u7CFB\u7EDF\u8FD0\u884C\u76EE\u5F55\uFF0C\u5B58\u653E\u4E0A\u4F20\u7684\u6587\u4EF6\u3001\u9664\u4E86system.properties\u4EE5\u5916\u7684\u914D\u7F6E\u6587\u4EF6\u3001\u7D22\u5F15\u7B49\u7B49
 app.home = /D/Projects/RunData/demo_home
+#\u662F\u5426\u4E3A\u5B50\u7CFB\u7EDF
 app.subsystem = false
+# \u8FD9\u4E2A\u7528\u4E8E\u524D\u540E\u7AEF\u90E8\u7F72\u518D\u540C\u4E00\u4E2Atomcat\u65F6\u6307\u5B9A\u7CFB\u7EDFapp\u7684\u540D\u79F0\uFF0C\u8FD9\u6837\u53EF\u4EE5\u627E\u5230\u9759\u6001\u9875\u9762\uFF0C\u4E00\u822C\u53EA\u7528\u4E8E\u6D4B\u8BD5
 app.staticfile.home = /framework
+# \u540C\u6837\u53EA\u7528\u4E8E\u7EDF\u4E00\u90E8\u7F72\u65F6\u6307\u5B9A\u9996\u9875\u9875\u9762
 app.local.firstpage = /system/mainframe/index
 #\u591A\u56FD\u8BED\u8A00\u8BBE\u7F6E
 app.local.multiLang= false
