--- a/framework-web-demo/pom.xml
+++ b/framework-web-demo/pom.xml
@@ -3,8 +3,14 @@
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 
+    <parent>
+        <artifactId>framework-snapshot-dependencies</artifactId>
+        <groupId>com.centit.framework</groupId>
+        <version>1.0-SNAPSHOT</version>
+    </parent>
+
     <groupId>com.centit.framework</groupId>
-    <version>4.1-SNAPSHOT</version>
+    <version>1.0-SNAPSHOT</version>
     <modelVersion>4.0.0</modelVersion>
 
     <artifactId>framework-web-demo</artifactId>
@@ -16,41 +22,23 @@
         其他的两个选择 framework-sys-view-easyui
     </description>
 
-    <properties>
-        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 
-        <jdk.version>1.8</jdk.version>
-        <centit.commons.version>2.2.1803</centit.commons.version>
-
-        <centit.ui.version>3.1.0</centit.ui.version>
-        <websocket-api.version>1.1</websocket-api.version>
-        <ojdbc6.version>11.2.0.4</ojdbc6.version>
-        <junit.version>4.12</junit.version>
-        <mysql.version>5.1.9</mysql.version>
-        <javafaker.version>0.14</javafaker.version>
-
-        <servlet-api.version>3.1.0</servlet-api.version>
-        <persistence-api.version>2.2</persistence-api.version>
-    </properties>
 
     <dependencies>
 
         <dependency>
             <groupId>com.centit.framework</groupId>
             <artifactId>framework-base-view-easyui</artifactId>
-            <version>${centit.ui.version}</version>
         </dependency>
 
         <dependency>
             <groupId>com.centit.framework</groupId>
             <artifactId>framework-core-web</artifactId>
-            <version>${version}</version>
         </dependency>
 
         <dependency>
             <groupId>com.centit.framework</groupId>
             <artifactId>framework-config</artifactId>
-            <version>${version}</version>
         </dependency>
 
         <!--<dependency>
@@ -62,19 +50,16 @@
         <dependency>
             <groupId>com.centit.framework</groupId>
             <artifactId>framework-system-static</artifactId>
-            <version>${version}</version>
         </dependency>
 
         <dependency>
             <groupId>com.centit.framework</groupId>
             <artifactId>framework-system-static-config</artifactId>
-            <version>${version}</version>
         </dependency>
 
         <dependency>
             <groupId>javax.persistence</groupId>
             <artifactId>javax.persistence-api</artifactId>
-            <version>${persistence-api.version}</version>
         </dependency>
         <!-- server runtime library -->
         <dependency>
@@ -88,21 +73,18 @@
         <dependency>
             <groupId>javax.websocket</groupId>
             <artifactId>javax.websocket-api</artifactId>
-            <version>${websocket-api.version}</version>
             <scope>provided</scope>
         </dependency>
 
         <dependency>
             <groupId>javax.servlet</groupId>
             <artifactId>javax.servlet-api</artifactId>
-            <version>${servlet-api.version}</version>
             <scope>provided</scope>
         </dependency>
 
         <dependency>
             <groupId>com.github.javafaker</groupId>
             <artifactId>javafaker</artifactId>
-            <version>${javafaker.version}</version>
             <scope>test</scope>
         </dependency>
 
