--- a/pom.xml
+++ b/pom.xml
@@ -7,7 +7,7 @@
     <parent>
         <artifactId>centit-framework-dependencies</artifactId>
         <groupId>com.centit.framework</groupId>
-        <version>1.0-SNAPSHOT</version>
+        <version>1.1.1805</version>
     </parent>
 
     <groupId>com.centit.framework</groupId>
@@ -23,7 +23,7 @@
 
     <properties>
         <centit.persistence.version>1.1-SNAPSHOT</centit.persistence.version>
-        <centit.commons.version>2.2.1804</centit.commons.version>
+        <centit.commons.version>2.2.1805</centit.commons.version>
         <centit.ui.version>3.1.0</centit.ui.version>
         <centit.msgpusher.version>0.1.1803</centit.msgpusher.version>
     </properties>
