--- a/pom.xml
+++ b/pom.xml
@@ -23,9 +23,9 @@
 
     <properties>
         <centit.persistence.version>1.1-SNAPSHOT</centit.persistence.version>
-        <centit.commons.version>2.2.1805</centit.commons.version>
+        <centit.commons.version>2.2-SNAPSHOT</centit.commons.version>
         <centit.ui.version>3.1.0</centit.ui.version>
-        <centit.msgpusher.version>0.1.1803</centit.msgpusher.version>
+        <centit.msgpusher.version>0.1.1805</centit.msgpusher.version>
     </properties>
 
     <licenses>
