--- a/framework-web-demo/src/main/resources/system.properties
+++ b/framework-web-demo/src/main/resources/system.properties
@@ -53,18 +53,18 @@ http.csrf.enable = false
 # Indicates if the filter chain should be continued prior to delegation to
 # which may be useful in certain environment (such as Tapestry applications).
 http.filter.chain.continueBeforeSuccessfulAuthentication = false
+
+http.anonymous.disable = false
 #\u8BBE\u7F6E\u6240\u6709\u7684\u8D44\u6E90\u90FD\u8981\u88AB\u5BA1\u6838\uFF0C\u9ED8\u8BA4\u4E3Afalse\uFF0C\u5982\u679C\u662Ffalse\u5C31\u662F\u6CA1\u6709\u8D4B\u7ED9\u4EFB\u4F55\u89D2\u8272\u7684\u64CD\u4F5C\u5C31\u4F1A\u88AB\u8BA4\u4E3A\u662F\u4E0D\u9700\u8981\u5BA1\u6838\u7684\uFF0C\u4F1A\u81EA\u52A8\u653E\u884C
-http.security.allResourceMustBeAudited =
-http.anonymous.disable = true
-access.resource.notallowed.anonymous = true
-access.resource.must.be.audited = false
+access.resource.notallowed.anonymous = false
+#\u4E0D\u62E6\u622A\u7684url url\u4E4B\u95F4\u7528\uFF0C\u9694\u5F00
 security.ignore.url =
 #\u767B\u5F55\u76F8\u5173\u8BBE\u7F6E\uFF0C \u8FD9\u4E9B\u8BBE\u7F6E\u53EA\u5728Dao\u767B\u9646\u65B9\u5F0F\u662F\u6709\u6548\uFF0Ccas\u767B\u9646\u65B9\u5F0F\u662F\uFF0C\u767B\u9646\u5F62\u5F0F\u6709cas\u51B3\u5B9A
 #\u5355\u70B9\u767B\u5F55\u76F8\u5173\u914D\u7F6E\u4FE1\u606F
 login.dao.enable= true
 login.cas.enable= false
-login.cas.localHome = http://localhost:8184/framework
-login.cas.casHome = https://zou_wy:8443/centit-cas
+login.cas.localHome = http://localhost:8085/framework
+login.cas.casHome = http://localhost:8080/centit-cas
 
 #default false
 login.failure.writeLog =
@@ -128,4 +128,7 @@ session.persistence.db.type=h2
 session.h2.file = D:/Projects/RunData/demo_home/config/db
 session.redis.host=127.0.0.1
 session.redis.port=6379
+
+#\u8BBE\u7F6E\u662F\u5426\u5141\u8BB8\u88AB\u5D4C\u5165IFrame,\u4E09\u79CD\u6A21\u5F0F\uFF1ADISABLE(\u4E0D\u52A0x-frame-option\u5934\uFF0C\u5141\u8BB8\u88AB\u6240\u6709\u7F51\u7AD9\u5D4C\u5165),DENY(\u9ED8\u8BA4\uFF0C\u4E0D\u5141\u8BB8\u88AB\u5D4C\u5165),SAMEORIGIN(\u5141\u8BB8\u88AB\u540C\u6E90\u7F51\u7AD9\u5D4C\u5165)
+framework.x-frame-options.mode =
 
