测试 用户机构表达式

--- a/framework-web-demo/src/main/resources/static_system_config.json
+++ b/framework-web-demo/src/main/resources/static_system_config.json
@@ -72,13 +72,101 @@
 				  "unitOrder":"1",
 				  "depNo":"D01",
 				  "unitPath":"/d0000000"
-				  }],
+				  },
+		{"unitCode":"D1",
+			"unitName":"顶级部门1",
+			"parentUnit":"0",
+			"unitType":"D",
+			"isValid":"T",
+			"unitOrder":"1",
+			"depNo":"D00001",
+			"unitPath":"/D1"
+		},
+		{"unitCode":"D11",
+			"unitName":"二级部门1",
+			"parentUnit":"D1",
+			"unitType":"D",
+			"isValid":"T",
+			"unitOrder":"1",
+			"depNo":"D00011",
+			"unitPath":"/D1/D11"
+		},
+		{"unitCode":"D12",
+			"unitName":"二级部门2",
+			"parentUnit":"D1",
+			"unitType":"D",
+			"isValid":"T",
+			"unitOrder":"1",
+			"depNo":"D12",
+			"unitPath":"/D1/D12"
+		},
+		{"unitCode":"D111",
+			"unitName":"三级部门1",
+			"parentUnit":"D11",
+			"unitType":"D",
+			"isValid":"T",
+			"unitOrder":"1",
+			"depNo":"D111",
+			"unitPath":"/D1/D11/D111"
+		},
+		{"unitCode":"D112",
+			"unitName":"三级部门2",
+			"parentUnit":"D11",
+			"unitType":"D",
+			"isValid":"T",
+			"unitOrder":"1",
+			"depNo":"D112",
+			"unitPath":"/D1/D11/D112"
+		},
+		{"unitCode":"D113",
+			"unitName":"三级部门3",
+			"parentUnit":"D11",
+			"unitType":"D",
+			"isValid":"T",
+			"unitOrder":"1",
+			"depNo":"D113",
+			"unitPath":"/D1/D11/D113"
+		},
+		{"unitCode":"D114",
+			"unitName":"三级部门4",
+			"parentUnit":"D11",
+			"unitType":"M",
+			"isValid":"T",
+			"unitOrder":"1",
+			"depNo":"D114",
+			"unitPath":"/D1/D11/D114"
+		},
+		{"unitCode":"D1111",
+			"unitName":"四级部门1",
+			"parentUnit":"D111",
+			"unitType":"D",
+			"isValid":"T",
+			"unitOrder":"1",
+			"depNo":"D1111",
+			"unitPath":"/D1/D11/D111/D1111"
+		},
+		{"unitCode":"D1112",
+			"unitName":"四级部门2",
+			"parentUnit":"D111",
+			"unitType":"D",
+			"isValid":"T",
+			"unitOrder":"1",
+			"depNo":"D1111",
+			"unitPath":"/D1/D11/D111/D1112"
+		}
+	],
 	"userUnits":[{"UserUnitId":"1",
 				  "unitCode":"d0000000",
 				  "userCode":"u0000000",
 				  "isPrimary":"T",
 				  "userStation":"管理员",
-				  "userRank":"部门经理"}],
+				  "userRank":"部门经理"},
+		{"UserUnitId":"2",
+			"unitCode":"D111",
+			"userCode":"u0000000",
+			"isPrimary":"F",
+			"userStation":"管理员",
+			"userRank":"部门经理"}],
 	"dataCatalogs":[{"catalogCode":"YesOrNo",
 				  "catalogName":"是否对应",
 				  "optId":"system",
