测试 用户机构表达式

--- a/framework-web-demo/src/main/resources/system.properties
+++ b/framework-web-demo/src/main/resources/system.properties
@@ -125,7 +125,7 @@ session.persistence.enable=false
 #session.persistence.db.type=redis
 session.persistence.db.type=h2
 
-session.h2.file = D:/Projects/RunData/demo_home/config/db
+session.h2.file = /D/Projects/RunData/demo_home/config/db
 session.redis.host=127.0.0.1
 session.redis.port=6379
 
