--- a/framework-web-demo/src/main/resources/static_system_config.json
+++ b/framework-web-demo/src/main/resources/static_system_config.json
@@ -3,7 +3,22 @@
 				  "userName":"管理员",
 				  "isValid":"T",
 				  "loginName":"admin",
-				  "userPin":"$2a$11$DbyFNhHeCES5CKoMuM5sXepY7GM35sZkUSqQbjYJnFTzJ2GDIYGLK"}],
+				  "userPin":"$2a$11$DbyFNhHeCES5CKoMuM5sXepY7GM35sZkUSqQbjYJnFTzJ2GDIYGLK"},
+		{"userCode":"u0000001",
+			"userName":"用户2",
+			"isValid":"T",
+			"loginName":"user2",
+			"userPin":"$2a$11$DbyFNhHeCES5CKoMuM5sXepY7GM35sZkUSqQbjYJnFTzJ2GDIYGLK"},
+		{"userCode":"u0000002",
+			"userName":"用户3",
+			"isValid":"T",
+			"loginName":"user3",
+			"userPin":"$2a$11$DbyFNhHeCES5CKoMuM5sXepY7GM35sZkUSqQbjYJnFTzJ2GDIYGLK"},
+		{"userCode":"u0000003",
+			"userName":"用户4",
+			"isValid":"T",
+			"loginName":"user4",
+			"userPin":"$2a$11$DbyFNhHeCES5CKoMuM5sXepY7GM35sZkUSqQbjYJnFTzJ2GDIYGLK"}],
 	"optInfos":[{"optId":"framework",
 				"optName":"框架应用",
 				"preOptId":"0",
@@ -164,6 +179,24 @@
 		{"UserUnitId":"2",
 			"unitCode":"D111",
 			"userCode":"u0000000",
+			"isPrimary":"F",
+			"userStation":"管理员",
+			"userRank":"部门经理"},
+		{"UserUnitId":"3",
+			"unitCode":"D111",
+			"userCode":"u0000001",
+			"isPrimary":"F",
+			"userStation":"管理员",
+			"userRank":"部门经理"},
+		{"UserUnitId":"4",
+			"unitCode":"D111",
+			"userCode":"u0000002",
+			"isPrimary":"F",
+			"userStation":"管理员",
+			"userRank":"部门经理"},
+		{"UserUnitId":"5",
+			"unitCode":"d0000000",
+			"userCode":"u0000003",
 			"isPrimary":"F",
 			"userStation":"管理员",
 			"userRank":"部门经理"}],
