--- a/framework-web-demo/src/main/resources/static_system_config.json
+++ b/framework-web-demo/src/main/resources/static_system_config.json
@@ -183,19 +183,19 @@
 			"userStation":"管理员",
 			"userRank":"部门经理"},
 		{"UserUnitId":"3",
-			"unitCode":"D111",
+			"unitCode":"D112",
 			"userCode":"u0000001",
 			"isPrimary":"F",
-			"userStation":"管理员",
+			"userStation":"用户1",
 			"userRank":"部门经理"},
 		{"UserUnitId":"4",
-			"unitCode":"D111",
+			"unitCode":"D113",
 			"userCode":"u0000002",
 			"isPrimary":"F",
 			"userStation":"管理员",
 			"userRank":"部门经理"},
 		{"UserUnitId":"5",
-			"unitCode":"d0000000",
+			"unitCode":"D114",
 			"userCode":"u0000003",
 			"isPrimary":"F",
 			"userStation":"管理员",
