--- a/framework-web-demo/src/main/resources/system.properties
+++ b/framework-web-demo/src/main/resources/system.properties
@@ -132,3 +132,6 @@ session.redis.port=6379
 #\u8BBE\u7F6E\u662F\u5426\u5141\u8BB8\u88AB\u5D4C\u5165IFrame,\u4E09\u79CD\u6A21\u5F0F\uFF1ADISABLE(\u4E0D\u52A0x-frame-option\u5934\uFF0C\u5141\u8BB8\u88AB\u6240\u6709\u7F51\u7AD9\u5D4C\u5165),DENY(\u9ED8\u8BA4\uFF0C\u4E0D\u5141\u8BB8\u88AB\u5D4C\u5165),SAMEORIGIN(\u5141\u8BB8\u88AB\u540C\u6E90\u7F51\u7AD9\u5D4C\u5165)
 framework.x-frame-options.mode =
 
+#\u767B\u5F55\u8BF7\u6C42 \u9ED8\u8BA4/login(POST)
+requires.authentication.request.url =
+
