--- a/framework-web-demo/pom.xml
+++ b/framework-web-demo/pom.xml
@@ -6,7 +6,7 @@
     <parent>
         <artifactId>framework-snapshot-dependencies</artifactId>
         <groupId>com.centit.framework</groupId>
-        <version>1.1.1808</version>
+        <version>1.1-SNAPSHOT</version>
     </parent>
 
     <groupId>com.centit.framework</groupId>
