--- a/pom.xml
+++ b/pom.xml
@@ -99,6 +99,8 @@
         <module>framework-core-web</module>
         <module>framework-system-static-config</module>
         <module>framework-system-static-jdbc</module>
+        <module>framework-session-redis</module>
+        <module>framework-session-jdbc</module>
     </modules>
 
     <build>
