jwt一般用于代替单点登录，不是用于session管理的，感觉不适合我们现在的需求

--- a/framework-web-demo/pom.xml
+++ b/framework-web-demo/pom.xml
@@ -40,6 +40,12 @@
         </dependency>
 
         <!--<dependency>
+            <groupId>com.nimbusds</groupId>
+            <artifactId>nimbus-jose-jwt</artifactId>
+            <version>6.1.1</version>
+        </dependency>-->
+
+        <!--<dependency>
             <groupId>com.centit.framework</groupId>
             <artifactId>framework-security</artifactId>
             <version>${centit.framework.version}</version>
