--- a/framework-config/pom.xml
+++ b/framework-config/pom.xml
@@ -28,6 +28,22 @@
             <version>${project.version}</version>
         </dependency>
 
+        <!-- Spring security family -->
+        <dependency>
+            <groupId>org.springframework.security</groupId>
+            <artifactId>spring-security-cas</artifactId>
+            <!--<exclusions>
+                <exclusion>
+                    <artifactId>commons-lang</artifactId>
+                    <groupId>commons-lang</groupId>
+                </exclusion>
+            </exclusions>-->
+        </dependency>
+
+        <dependency>
+            <groupId>org.jasig.cas.client</groupId>
+            <artifactId>cas-client-core</artifactId>
+        </dependency>
         <!--引入h2嵌入式数据库来管理session的持久化问题-->
 
         <dependency>
