删除了 没有必要的session变量ud

--- a/framework-web-demo/src/main/resources/system.properties
+++ b/framework-web-demo/src/main/resources/system.properties
@@ -73,7 +73,7 @@ login.failure.targetUrl =
 #default true
 login.success.writeLog =
 #default false
-login.success.registToken =
+login.success.registToken =true
 #default /
 login.success.targetUrl =
 #\u9A8C\u8BC1\u7801\u9A8C\u8BC1\u65F6\u673A  0 \u4E0D\u9A8C\u8BC1, 1 \u767B\u9646\u5931\u8D25\u540E \u518D\u6B21\u767B\u9646\u9A8C\u8BC1, 2 \u59CB\u7EC8\u9A8C\u8BC1 default 0
