--- a/framework-web-demo/src/main/resources/system.properties
+++ b/framework-web-demo/src/main/resources/system.properties
@@ -121,11 +121,11 @@ socketio.enable=false
 socketio.host = 127.0.0.1
 socketio.port = 9137
 
-session.persistence.enable= false
+session.persistence.enable= true
 #session.persistence.db.type=redis
 session.persistence.db.type=h2
 
-session.h2.file=/D/Projects/RunData/demo_home/config/h2session.db
+session.h2.file=D:/Projects/RunData/demo_home/config/h2db
 session.redis.host=127.0.0.1
 session.redis.port=6379
 
