--- a/framework-system-static-jdbc/pom.xml
+++ b/framework-system-static-jdbc/pom.xml
@@ -22,6 +22,12 @@
         </dependency>
 
         <dependency>
+            <groupId>com.centit.framework</groupId>
+            <artifactId>centit-persistence-core</artifactId>
+            <version>${centit.persistence.version}</version>
+        </dependency>
+
+        <dependency>
             <groupId>com.centit.support</groupId>
             <artifactId>centit-database-datasource</artifactId>
             <version>${centit.commons.version}</version>
