--- a/pom.xml
+++ b/pom.xml
@@ -22,7 +22,7 @@
     <url>https://github.com/ndxt/centit-framework</url>
 
     <properties>
-        <centit.persistence.version>1.1.1809</centit.persistence.version>
+        <centit.persistence.version>1.1-SNAPSHOT</centit.persistence.version>
         <centit.commons.version>2.2-SNAPSHOT</centit.commons.version>
         <centit.ui.version>3.1.1809</centit.ui.version>
     </properties>
