增强 权限表达式，并修改一个bug

--- a/framework-web-demo/src/main/resources/static_system_config.json
+++ b/framework-web-demo/src/main/resources/static_system_config.json
@@ -91,7 +91,7 @@
 		{"unitCode":"D1",
 			"unitName":"顶级部门1",
 			"parentUnit":"0",
-			"unitType":"D",
+			"unitType":"Z",
 			"isValid":"T",
 			"unitOrder":"1",
 			"depNo":"D00001",
@@ -178,9 +178,9 @@
 				  "userRank":"部门经理"},
 		{"UserUnitId":"2",
 			"unitCode":"D111",
-			"userCode":"u0000000",
+			"userCode":"u0000001",
 			"isPrimary":"F",
-			"userStation":"管理员",
+			"userStation":"用户1",
 			"userRank":"部门经理"},
 		{"UserUnitId":"3",
 			"unitCode":"D112",
