增强 权限表达式，并修改一个bug

--- a/framework-web-demo/src/main/resources/static_system_config.json
+++ b/framework-web-demo/src/main/resources/static_system_config.json
@@ -18,6 +18,21 @@
 			"userName":"用户4",
 			"isValid":"T",
 			"loginName":"user4",
+			"userPin":"$2a$11$DbyFNhHeCES5CKoMuM5sXepY7GM35sZkUSqQbjYJnFTzJ2GDIYGLK"},
+		{"userCode":"u0000004",
+			"userName":"用户5",
+			"isValid":"T",
+			"loginName":"user5",
+			"userPin":"$2a$11$DbyFNhHeCES5CKoMuM5sXepY7GM35sZkUSqQbjYJnFTzJ2GDIYGLK"},
+		{"userCode":"u0000005",
+			"userName":"用户6",
+			"isValid":"T",
+			"loginName":"user6",
+			"userPin":"$2a$11$DbyFNhHeCES5CKoMuM5sXepY7GM35sZkUSqQbjYJnFTzJ2GDIYGLK"},
+		{"userCode":"u0000006",
+			"userName":"用户7",
+			"isValid":"T",
+			"loginName":"user7",
 			"userPin":"$2a$11$DbyFNhHeCES5CKoMuM5sXepY7GM35sZkUSqQbjYJnFTzJ2GDIYGLK"}],
 	"optInfos":[{"optId":"framework",
 				"optName":"框架应用",
@@ -168,6 +183,32 @@
 			"unitOrder":"1",
 			"depNo":"D1111",
 			"unitPath":"/D1/D11/D111/D1112"
+		},{"unitCode":"D2",
+			"unitName":"顶级部门2",
+			"parentUnit":"0",
+			"unitType":"D",
+			"isValid":"T",
+			"unitOrder":"1",
+			"depNo":"D00001",
+			"unitPath":"/D2"
+		},
+		{"unitCode":"D21",
+			"unitName":"二级部门21",
+			"parentUnit":"D2",
+			"unitType":"D",
+			"isValid":"T",
+			"unitOrder":"1",
+			"depNo":"D00011",
+			"unitPath":"/D2/D21"
+		},
+		{"unitCode":"D22",
+			"unitName":"二级部门22",
+			"parentUnit":"D2",
+			"unitType":"D",
+			"isValid":"T",
+			"unitOrder":"1",
+			"depNo":"D22",
+			"unitPath":"/D2/D22"
 		}
 	],
 	"userUnits":[{"UserUnitId":"1",
