增强 权限表达式，并修改一个bug

--- a/framework-web-demo/src/main/resources/static_system_config.json
+++ b/framework-web-demo/src/main/resources/static_system_config.json
@@ -76,22 +76,22 @@
 				  "optUrl":"/currentuser",
 				  "optMethod":"currentuser",
 				  "optReq":"R"}],
-	"roleInfos":[{"roleCode":"G-SYSADMIN",
+	"roleInfos":[{"roleCode":"sysadmin",
 				  "roleName":"系统管理员",
 				  "roleType":"S",
 				  "isValid":"T",
 				  "roleDesc":"所有系统配置功能"}],
-	"rolePowers":[{"roleCode":"G-SYSADMIN",
+	"rolePowers":[{"roleCode":"sysadmin",
 				   "optCode":"1000080",
 				   "optScopeCodes":""},
-				   {"roleCode":"G-SYSADMIN",
+				   {"roleCode":"sysadmin",
 				   "optCode":"1000078",
 				   "optScopeCodes":""},
-				   {"roleCode":"G-SYSADMIN",
+				   {"roleCode":"sysadmin",
 				   "optCode":"1000079",
 				   "optScopeCodes":""}],
 	"userRoles":[{"userCode":"u0000000",
-				  "roleCode":"G-SYSADMIN",
+				  "roleCode":"sysadmin",
 				  "obtainDate":"2016-04-24",
 				  "changeDesc":""}],
 	"unitInfos":[{"unitCode":"d0000000",
