--- a/framework-web-demo/src/main/resources/system.properties
+++ b/framework-web-demo/src/main/resources/system.properties
@@ -125,6 +125,10 @@ session.persistence.enable= true
 #session.persistence.db.type=redis
 session.persistence.db.type=h2
 
+session.jdbc.url = jdbc:mysql://192.168.128.32:3306/framework_session?useUnicode=true&characterEncoding=utf-8
+session.jdbc.username = framework
+session.jdbc.password = framework
+
 session.h2.file=D:/Projects/RunData/demo_home/config/h2db
 session.redis.host=127.0.0.1
 session.redis.port=6379
