修改 异常 处理bug

--- a/framework-web-demo/src/main/resources/system.properties
+++ b/framework-web-demo/src/main/resources/system.properties
@@ -121,7 +121,7 @@ socketio.enable=false
 socketio.host = 127.0.0.1
 socketio.port = 9137
 
-session.persistence.enable=true
+session.persistence.enable=false
 #session.persistence.db.type=redis
 session.persistence.db.type=h2
 
