--- a/framework-web-demo/src/main/resources/system.properties
+++ b/framework-web-demo/src/main/resources/system.properties
@@ -122,7 +122,7 @@ socketio.host = 127.0.0.1
 socketio.port = 9137
 
 #session.persistence.db.type=redis
-#session.persistence.db.type=jdbc
+session.persistence.db.type=jdbc
 
 #session.redis.host=127.0.0.1
 #session.redis.port=6379
