--- a/framework-web-demo/src/main/resources/system.properties
+++ b/framework-web-demo/src/main/resources/system.properties
@@ -89,7 +89,7 @@ login.retry.lockMinites =
 #\u91CD\u8BD5\u95F4\u9694\u65F6\u95F4\uFF0C\u5355\u4F4D\u4E3A\u5206\u949F\uFF0C\u8D85\u8FC7\u8FD9\u4E2A\u65F6\u95F4\u91CD\u8BD5\u6B21\u6570\u6E050\uFF0C default 3
 login.retry.checkTimeTnterval =
 # \u9ED8\u8BA4\u503C\u4E3A true \u5982\u679C\u662F \u975E\u540C\u6E90\u90E8\u7F72\u9700\u8981\u8BBE\u7F6E\u4E3A false
-login.nouser.exception.ashttperror = true
+exception.not.as.httpError = true
 
 #LDAP\u767B\u5F55\u914D\u7F6E
 ldap.url=ldap://192.168.128.5:389
