重命名系统参数

--- a/framework-web-demo/src/main/resources/system.properties
+++ b/framework-web-demo/src/main/resources/system.properties
@@ -55,6 +55,9 @@ http.csrf.enable = false
 http.filter.chain.continueBeforeSuccessfulAuthentication = false
 
 http.anonymous.disable = false
+# \u9ED8\u8BA4\u503C\u4E3A false \u5982\u679C\u662F \u975E\u540C\u6E90\u90E8\u7F72\u9700\u8981\u8BBE\u7F6E\u4E3A true
+http.exception.notAsHttpError = true
+
 #\u8BBE\u7F6E\u6240\u6709\u7684\u8D44\u6E90\u90FD\u8981\u88AB\u5BA1\u6838\uFF0C\u9ED8\u8BA4\u4E3Afalse\uFF0C\u5982\u679C\u662Ffalse\u5C31\u662F\u6CA1\u6709\u8D4B\u7ED9\u4EFB\u4F55\u89D2\u8272\u7684\u64CD\u4F5C\u5C31\u4F1A\u88AB\u8BA4\u4E3A\u662F\u4E0D\u9700\u8981\u5BA1\u6838\u7684\uFF0C\u4F1A\u81EA\u52A8\u653E\u884C
 access.resource.notallowed.anonymous = false
 #\u4E0D\u62E6\u622A\u7684url url\u4E4B\u95F4\u7528\uFF0C\u9694\u5F00
@@ -88,8 +91,9 @@ login.retry.maxTryTimes =
 login.retry.lockMinites =
 #\u91CD\u8BD5\u95F4\u9694\u65F6\u95F4\uFF0C\u5355\u4F4D\u4E3A\u5206\u949F\uFF0C\u8D85\u8FC7\u8FD9\u4E2A\u65F6\u95F4\u91CD\u8BD5\u6B21\u6570\u6E050\uFF0C default 3
 login.retry.checkTimeTnterval =
-# \u9ED8\u8BA4\u503C\u4E3A true \u5982\u679C\u662F \u975E\u540C\u6E90\u90E8\u7F72\u9700\u8981\u8BBE\u7F6E\u4E3A false
-exception.not.as.httpError = true
+
+#\u767B\u5F55\u8BA4\u8BC1URL \u9ED8\u8BA4/login(POST)
+login.authentication.url =
 
 #LDAP\u767B\u5F55\u914D\u7F6E
 ldap.url=ldap://192.168.128.5:389
@@ -136,6 +140,5 @@ session.cookie.path = /
 #\u8BBE\u7F6E\u662F\u5426\u5141\u8BB8\u88AB\u5D4C\u5165IFrame,\u4E09\u79CD\u6A21\u5F0F\uFF1ADISABLE(\u4E0D\u52A0x-frame-option\u5934\uFF0C\u5141\u8BB8\u88AB\u6240\u6709\u7F51\u7AD9\u5D4C\u5165),DENY(\u9ED8\u8BA4\uFF0C\u4E0D\u5141\u8BB8\u88AB\u5D4C\u5165),SAMEORIGIN(\u5141\u8BB8\u88AB\u540C\u6E90\u7F51\u7AD9\u5D4C\u5165)
 framework.x-frame-options.mode =
 
-#\u767B\u5F55\u8BF7\u6C42 \u9ED8\u8BA4/login(POST)
-requires.authentication.request.url =
+
 
