--- a/framework-web-demo/src/main/resources/system.properties
+++ b/framework-web-demo/src/main/resources/system.properties
@@ -16,6 +16,7 @@ app.local.multiLang= false
 app.local.defalutLang=zh_CN
 #\u662F\u5426\u5F00\u653E\u5B9E\u65BD\u4EBA\u5458\u5165\u53E3
 app.deploy.enabled = true
+app.servlet.name =service
 
 #\u6570\u636E\u5E93\u8FDE\u63A5\u53C2\u6570\u914D\u7F6E\uFF0C\u540E\u7EED\u7684\u7248\u672C\u4F1A\u628A\u8FD9\u4E2A\u66FF\u6362\u4E3Ajdni\u90A3\u6837\u66F4\u7075\u6D3B\u66F4\u5B89\u5168\uFF0C
 #\u56E0\u4E3A\u4E0D\u8981\u63D0\u4F9B\u5BC6\u7801\uFF0C\u5355\u5143\u914D\u7F6E\u6587\u4EF6\u4E2D\u4E5F\u53EF\u4EE5\u5BF9\u5BC6\u7801\u8FDB\u884C\u52A0\u5BC6\uFF0C\u6682\u65F6\u6CA1\u6709\u505A
@@ -120,7 +121,7 @@ webuser.enable=false
 webuser.role=G-webuser
 
 
-#\u6D88\u606F\u7EC4\u4EF6WebSocketIO\u670D\u52A1\u5668\u5730\u5740\u53CA\u7AEF\u53E3 
+#\u6D88\u606F\u7EC4\u4EF6WebSocketIO\u670D\u52A1\u5668\u5730\u5740\u53CA\u7AEF\u53E3
 #(\u8FD9\u4E2A\u5730\u5740\u4E00\u822C\u548Cweb\u670D\u52A1\u5668\u5730\u5740\u4E00\u81F4\uFF0C\u4E5F\u53EF\u4EE5\u5C06\u8FD9\u90E8\u5206\u670D\u52A1\u5355\u72EC\u90E8\u7F72\u5230\u4E00\u4E2A\u670D\u52A1\u5668\u4E0A)
 socketio.enable=false
 socketio.host = 127.0.0.1
