重命名系统参数

--- a/framework-web-demo/src/main/resources/system.properties
+++ b/framework-web-demo/src/main/resources/system.properties
@@ -126,12 +126,11 @@ socketio.enable=false
 socketio.host = 127.0.0.1
 socketio.port = 9137
 
-#session.persistence.db.type=redis
-session.persistence.db.type=jdbc
+session.persistence.db.type=redis
+session.redis.host=192.168.134.9
+session.redis.port=6379
 
-#session.redis.host=127.0.0.1
-#session.redis.port=6379
-
+#session.persistence.db.type=jdbc
 #session.jdbc.url = jdbc:mysql://192.168.128.32:3306/framework_session?useUnicode=true&characterEncoding=utf-8
 #session.jdbc.username = framework
 #session.jdbc.password = framework
