--- a/framework-web-demo/src/main/resources/system.properties
+++ b/framework-web-demo/src/main/resources/system.properties
@@ -127,9 +127,9 @@ socketio.enable=false
 socketio.host = 127.0.0.1
 socketio.port = 9137
 
-#session.persistence.db.type=redis
-#session.redis.host=192.168.134.9
-#session.redis.port=6379
+session.persistence.db.type=redis
+session.redis.host=192.168.134.9
+session.redis.port=6379
 
 #session.persistence.db.type=jdbc
 #session.jdbc.url = jdbc:mysql://192.168.128.32:3306/framework_session?useUnicode=true&characterEncoding=utf-8
