添加新类别 WrapUpContentType

--- a/framework-web-demo/src/main/resources/static_system_config.json
+++ b/framework-web-demo/src/main/resources/static_system_config.json
@@ -261,6 +261,16 @@
 				  "dataValue":"否",
 				  "dataTag":"N",
 				  "dataOrder":"1"},
+					{"catalogCode":"YesOrNo",
+						"dataCode":"yes",
+						"dataValue":"是",
+						"dataTag":"N",
+						"dataOrder":"1"},
+					{"catalogCode":"YesOrNo",
+						"dataCode":"no",
+						"dataValue":"否",
+						"dataTag":"N",
+						"dataOrder":"1"},
 				  {"catalogCode":"TrueOrFalse",
 				  "dataCode":"T",
 				  "dataValue":"真",
@@ -270,5 +280,25 @@
 				  "dataCode":"F",
 				  "dataValue":"假",
 				  "dataTag":"N",
-				  "dataOrder":"1"}]
+				  "dataOrder":"1"},
+				{"catalogCode":"TrueOrFalse",
+					"dataCode":"true",
+					"dataValue":"真",
+					"dataTag":"N",
+					"dataOrder":"1"},
+				{"catalogCode":"TrueOrFalse",
+					"dataCode":"false",
+					"dataValue":"假",
+					"dataTag":"N",
+					"dataOrder":"1"},
+				{"catalogCode":"TrueOrFalse",
+					"dataCode":"1",
+					"dataValue":"真",
+					"dataTag":"N",
+					"dataOrder":"1"},
+				{"catalogCode":"TrueOrFalse",
+					"dataCode":"0",
+					"dataValue":"假",
+					"dataTag":"N",
+					"dataOrder":"1"}]
 }
