添加 ToResponseData接口，重构了WrapUpResponseBody注解的实现方式

--- a/framework-web-demo/pom.xml
+++ b/framework-web-demo/pom.xml
@@ -30,6 +30,11 @@
         </dependency>
 
         <dependency>
+            <groupId>com.centit.support</groupId>
+            <artifactId>centit-database</artifactId>
+        </dependency>
+
+        <dependency>
             <groupId>com.centit.framework</groupId>
             <artifactId>framework-base-view-easyui</artifactId>
         </dependency>
