--- a/framework-session/pom.xml
+++ b/framework-session/pom.xml
@@ -17,6 +17,7 @@
         <dependency>
             <groupId>com.centit.support</groupId>
             <artifactId>centit-database</artifactId>
+            <version>${centit.commons.version}</version>
         </dependency>
 
         <dependency>
