--- a/framework-web-demo/pom.xml
+++ b/framework-web-demo/pom.xml
@@ -32,6 +32,7 @@
         <dependency>
             <groupId>com.centit.support</groupId>
             <artifactId>centit-database</artifactId>
+            <version>${centit.commons.version}</version>
         </dependency>
 
         <dependency>
