--- a/framework-session/pom.xml
+++ b/framework-session/pom.xml
@@ -55,9 +55,15 @@
         </dependency>
 
         <dependency>
+            <groupId>org.springframework.session</groupId>
+            <artifactId>spring-session-data-redis</artifactId>
+        </dependency>
+
+        <dependency>
             <groupId>biz.paluch.redis</groupId>
             <artifactId>lettuce</artifactId>
         </dependency>
+
     </dependencies>
 
 </project>
