完善 数据字典 注解获取的问题，并重构代码

--- a/framework-system-static/pom.xml
+++ b/framework-system-static/pom.xml
@@ -22,6 +22,11 @@
             <version>${project.version}</version>
         </dependency>
 
+        <dependency>
+            <groupId>javax.persistence</groupId>
+            <artifactId>javax.persistence-api</artifactId>
+            <scope>test</scope>
+        </dependency>
         <!-- test library -->
         <dependency>
             <groupId>junit</groupId>
