--- a/pom.xml
+++ b/pom.xml
@@ -142,7 +142,7 @@
                 </executions>
             </plugin>
 
-            <!--<plugin>
+            <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-javadoc-plugin</artifactId>
                 <version>2.10.4</version>
@@ -154,11 +154,11 @@
                         </goals>
                     </execution>
                 </executions>
-            </plugin>-->
+            </plugin>
 
             <!-- GPG自动签名的插件 -->
 
-           <!-- <plugin>
+            <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-gpg-plugin</artifactId>
                 <version>1.6</version>
@@ -173,10 +173,10 @@
                 </executions>
             </plugin>
 
-            &lt;!&ndash; sonatype release :
-                mvn nexus-staging:release&ndash;&gt;
+            <!-- sonatype release :
+                mvn nexus-staging:release-->
 
-            <plugin>
+            <!--<plugin>
                 <groupId>org.sonatype.plugins</groupId>
                 <artifactId>nexus-staging-maven-plugin</artifactId>
                 <version>1.6.8</version>
