--- a/pom.xml
+++ b/pom.xml
@@ -7,13 +7,13 @@
     <parent>
         <artifactId>centit-framework-dependencies</artifactId>
         <groupId>com.centit.framework</groupId>
-        <version>1.1.1812</version>
+        <version>1.2.1901</version>
     </parent>
 
     <groupId>com.centit.framework</groupId>
     <artifactId>framework-parent</artifactId>
     <packaging>pom</packaging>
-    <version>4.4-SNAPSHOT</version>
+    <version>4.5.1901</version>
     <name>com.centit.framework:framework-parent</name>
     <description>基于spring mvc的内部开发框架.
         包括了对 spring mvc, spring security, spring session, hibernate, mybatis, flyway 等等开源框架的整合；
@@ -22,9 +22,9 @@
     <url>https://github.com/ndxt/centit-framework</url>
 
     <properties>
-        <centit.persistence.version>1.1-SNAPSHOT</centit.persistence.version>
-        <centit.commons.version>2.2-SNAPSHOT</centit.commons.version>
-        <centit.ui.version>3.1-SNAPSHOT</centit.ui.version>
+        <centit.persistence.version>1.2.1901</centit.persistence.version>
+        <centit.commons.version>2.2.1901</centit.commons.version>
+        <centit.ui.version>3.1.1809</centit.ui.version>
     </properties>
 
     <licenses>
